--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <include layout="@layout/search_window" />
+    <include
+        android:id="@+id/searchLayout"
+        layout="@layout/search_window" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/flowerRecycler"
@@ -16,9 +19,10 @@
         android:foregroundGravity="center"
         android:paddingTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/bg_image"
-        app:layout_constraintRight_toRightOf="@id/bg_image"
-        app:layout_constraintTop_toBottomOf="@id/bg_image" />
+        app:layout_constraintLeft_toLeftOf="@id/searchLayout"
+        app:layout_constraintRight_toRightOf="@id/searchLayout"
+        app:layout_constraintTop_toBottomOf="@id/searchLayout"
+        tools:ignore="NotSibling" />
 
     <ProgressBar
         android:id="@+id/progressBar"
